--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcsh 'Fantasy fiction'
 - !lcsh 'Adventure stories'
 - !lcc 'PR'
+- GITenberg
 title: The Life and Adventures of Peter Wilkins, Volume 1 (of 2)
 url: http://www.gutenberg.org/ebooks/21513
